test(core): migrate physics module tests
Signed-off-by: Blovien <blovien@hytalemodding.dev>